# papermario-solver

./: .eslintrc.json  .gitignore  1.worker.js  Cargo.toml  LICENSE  README.md  animation.d.ts  controls.d.ts  cursor.d.ts  index.css  index.html  index.js  index.js.map  movement.d.ts  package-lock.json  package.json  ring.d.ts  solver.d.ts  tsconfig.json  webpack.config.js  wheel.js  worker.d.ts  worker.js
src/: animation.ts  controls.ts  cursor.ts  index.ts  instant.rs  movement.ts  ring.ts  ring_settings.ts  solver.rs  solver.ts  wheel.ts  worker.ts
static/: CNAME  index.css  index.html
